2014-11-12  Beth Dakin  <bdakin@apple.com>

        WK1: Support default actions for images
        https://bugs.webkit.org/show_bug.cgi?id=138668
        -and corresponding-
        rdar://problem/18785434

        Reviewed by Tim Horton.

        Symbol needed for copying image.
        * WebCore.exp.in:

2014-11-12  Matthew Hanson  <matthew_hanson@apple.com>

        Merge r175966. <rdar://problem/18866308>

    2014-11-11  Tim Horton  <timothy_horton@apple.com>

            DataDetectors' menu items aren't presented in the telephone number menu
            https://bugs.webkit.org/show_bug.cgi?id=138602
            <rdar://problem/18866308>

            Reviewed by Beth Dakin.

            * English.lproj/Localizable.strings:
            Remove a now-unused localized string.


2014-11-12  Matthew Hanson  <matthew_hanson@apple.com>

        Merge r176037. <rdar://problem/18869900>

    2014-11-12  Tim Horton  <timothy_horton@apple.com>

            Need to show the text indicator when Data Detectors shows a popover
            https://bugs.webkit.org/show_bug.cgi?id=138664
            <rdar://problem/18869900>

            Reviewed by Beth Dakin.

            * platform/spi/mac/DataDetectorsSPI.h:
            Add new DataDetectors SPI.


2014-11-11  Tim Horton  <timothy_horton@apple.com>

        Add support for mailto: link action menus
        https://bugs.webkit.org/show_bug.cgi?id=138641
        <rdar://problem/18741567>

        Reviewed by Beth Dakin.

        * WebCore.exp.in:
        Add an export.

        * platform/spi/mac/DataDetectorsSPI.h:
        Add some DataDetectors SPI.

2014-11-12  Matthew Hanson  <matthew_hanson@apple.com>

        Merge r175964. <rdar://problem/18867627>

    2014-11-11  Tim Horton  <timothy_horton@apple.com>

            Adopt DDActionContext menu type SPI
            https://bugs.webkit.org/show_bug.cgi?id=138603
            <rdar://problem/18867627>

            Reviewed by Anders Carlsson.
