@@ -1267,7 +1267,6 @@ __ZN7WebCore6Editor7CommandC1Ev
 __ZN7WebCore6Editor7commandERKN3WTF6StringE
 __ZN7WebCore6Editor7copyURLERKNS_3URLERKN3WTF6StringE
 __ZN7WebCore6Editor7outdentEv
-__ZN7WebCore6Editor9copyImageERKNS_13HitTestResultE
 __ZN7WebCore6JSNode6s_infoE
 __ZN7WebCore6LengthC1EN3WTF7PassRefINS_16CalculationValueEEE
 __ZN7WebCore6Region21updateBoundsFromShapeEv
@@ -2497,6 +2496,10 @@ _wkCreateMemoryStatusPressureCriticalDispatchOnMainQueue
 
 #if PLATFORM(MAC) || PLATFORM(IOS_SIMULATOR)
 _wkSetCrashReportApplicationSpecificInformation
+#endif
+
+#if !PLATFORM(IOS)
+__ZN7WebCore6Editor9copyImageERKNS_13HitTestResultE
 #endif
 
 #if PLATFORM(IOS)
