@@ -1,5 +1,11 @@
 2014-11-12  Beth Dakin  <bdakin@apple.com>
 
+        Speculative build fix.
+
+        * WebCore.exp.in:
+
+2014-11-12  Beth Dakin  <bdakin@apple.com>
+
         WK1: Support default actions for images
         https://bugs.webkit.org/show_bug.cgi?id=138668
         -and corresponding-
